tests/specs/ecosystem/olets/css_fluid_length/1_2_1.test
olets/css-fluid-length/1.2.1
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2304 [ERROR]: Cannot find name 'PxableLength'.
function fluidLength(fromLength: PxableLength, toLength: PxableLength, options?: Config): string {
                                 ~~~~~~~~~~~~
    at file://<tmpdir>/src/index.ts:11:34

TS2304 [ERROR]: Cannot find name 'PxableLength'.
function fluidLength(fromLength: PxableLength, toLength: PxableLength, options?: Config): string {
                                                         ~~~~~~~~~~~~
    at file://<tmpdir>/src/index.ts:11:58

TS2304 [ERROR]: Cannot find name 'Config'.
function fluidLength(fromLength: PxableLength, toLength: PxableLength, options?: Config): string {
                                                                                 ~~~~~~
    at file://<tmpdir>/src/index.ts:11:82

TS2304 [ERROR]: Cannot find name 'PxableLength'.
function pxNumber(length: PxableLength): number {
                          ~~~~~~~~~~~~
    at file://<tmpdir>/src/index.ts:22:27

Found 4 errors.

error: Type checking failed.

